# AI-SMC

./: .env.example  .env.production  .gitignore  README.md  pyproject.toml
.claude/: launch.json
config/: smc_config.yaml
dashboard/: SPEC.md  index.html
data/: ai_filter_analysis.json  direction_cache_v2.parquet  gate1_oos_results.json  gate1_v2_oos_results.json  gate1_v3_windows.jsonl  gate1_v4_windows.jsonl  gate1_v5_windows.jsonl  gate1_v6_windows.jsonl  gate1_v7_windows.jsonl  gate_v10_v1.jsonl  gate_v10_v1_1.jsonl  gate_v8_v1.jsonl  gate_v8_v2.jsonl  gate_v9_v1.jsonl  gate_v9_v3.jsonl  ranging_opportunity.json  regime_cache.parquet  worst_indicator_matrix.json
docs/: ARCHITECTURE.md  HANDOFF.md  MILESTONE_20260418.md  R_ROUND_GATE.md  SPRINT11_REVIEW.md  VPS_DEPLOYMENT.md  dashboard_guide.md  dashboard_prd.md
mql5/: AISMCReceiver.mq5
scripts/: ab_compare.py  ai_analyze.py  ai_filter_analysis.py  backfill_data.py  backfill_histdata.py  backtest_mode_router_ab.py  backtest_range_ai_gates_ab.py  bootstrap_vps.ps1  build_daily_digest.py  build_gate_funnel.py  dashboard.py  dashboard_server.py  deploy_ea.ps1  deploy_vps.ps1  deploy_vps.sh  export_mt5_csv.mq5  install_daily_summary_task.ps1  install_service.ps1  live_demo.py  notify_ea_deploy.py  probe_env.py  probe_macro.py  ranging_opportunity.py  rebuild_setup_cache_synthetic.py  regret_analysis.py  run_gate1_oos.py  run_gate1_v2_oos.py  run_gate1_v3_oos.py  run_gate1_v4_oos.py  run_promotion_gate.py  run_v10_single_window.py  run_v3_single_window.py  run_v4_single_window.py  run_v5_single_window.py  run_v6_single_window.py  (+21 more)
(+253 files in other folders)
