[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-smc"
version = "0.1.0"
description = "AI-powered Smart Money Concepts trading system for XAUUSD on MetaTrader 5"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "polars>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyarrow>=14.0",
    "duckdb>=0.9",
    "typer>=0.12",
    "rich>=13.0",
    "scipy>=1.11",
    "smartmoneyconcepts>=0.0.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.45"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
smc = "smc.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/smc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]
markers = [
    "unit: fast, no IO",
    "integration: may touch disk or network",
    "mt5: requires Windows MT5 terminal",
    "slow: backtest runs > 10 seconds",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["smc"]

[tool.coverage.report]
fail_under = 80
show_missing = true
